--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "csv-parse": "^4.8.8",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "fs-extra": "^9.0.1",
     "http-server": "^0.12.1",
     "lodash": "^4.17.20",
     "morgan": "^1.10.0"
