--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "fs-extra": "^9.0.1",
     "http-server": "^0.12.1",
     "lodash": "^4.17.20",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
