--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "http-server": "^0.12.1",
     "lodash": "^4.17.20",
     "morgan": "^1.10.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "socketio-file-upload": "^0.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
