--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
     "express-fileupload": "^1.2.0",
     "fs-extra": "^9.0.1",
     "http-server": "^0.12.1",
-    "lodash": "^4.17.20",
     "morgan": "^1.10.0",
-    "socket.io": "^2.3.0",
-    "socketio-file-upload": "^0.7.2"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
