--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Juraj Uhlar",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
