--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs-extra": "^9.0.1",
     "http-server": "^0.12.1",
     "morgan": "^1.10.0",
+    "progress": "^2.0.3",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
